--- a/src/main/resources/templates/shop/index.html
+++ b/src/main/resources/templates/shop/index.html
@@ -210,7 +210,7 @@
                       <div class="product-title" >
                           ${product.title}
                       </div>
-                      <div class="product-title-bottom">
+                      <div class="product-title-bottom" style="font-size: 16px">
                       <span>
                           ${product.price}
                       </span>
@@ -230,7 +230,7 @@
                 <img src="${obj.avatar.fileUrl}"
                      alt="">
             </div>
-            <div class="item-content">
+            <div class="item-content" style="margin-left: 10px;">
                 <div class="title-close d-flex justify-content-between">
                     <span>${obj.title}</span>
                     <button>
