--- a/src/main/resources/templates/shop/modalPayment.html
+++ b/src/main/resources/templates/shop/modalPayment.html
@@ -4,7 +4,7 @@
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5">Chi tiết hoá Đơn</h1>
+                    <h1 id="tableId" class="modal-title fs-5"></h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -12,24 +12,37 @@
                     <form method="post" id="frmPayment" class="d-flex justify-content-around">
                         <table class="table table-striped table-hover w-100 " id="tbOrderItems">
                             <thead>
+
                             <tr>
                                 <th class="text-center">Sản phẩm</th>
                                 <th class="text-center">Số lượng</th>
-                                <th class="text-center">Ghi chú</th>
                                 <th class="text-center">Giá</th>
                                 <th class="text-center">Thành tiền</th>
+
                             </tr>
+
+
                             </thead>
                             <tbody>
 
 
                             </tbody>
+                            <tfoot>
+                                <tr id="totalAmountModal">
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tfoot>
+
                         </table>
+
                     </form>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="btnPayment">
+                    <button type="button" class="btn btn-primary" id="btnPaymentOrder">
                         <i class="fa-regular fa-money-bill-1"></i>
                         Thanh Toán
                     </button>
