--- a/src/main/resources/templates/layout/topbar.html
+++ b/src/main/resources/templates/layout/topbar.html
@@ -81,7 +81,7 @@
                     <div class="dropdown-divider"></div>
 
                     <!-- item-->
-                    <a href="/logout" class="dropdown-item notify-item logout-user">
+                    <a href=" " class="dropdown-item notify-item logout-user">
                         <i class="fa-solid fa-right-from-bracket"></i>
                         <span>Logout</span>
                     </a>
@@ -93,7 +93,7 @@
                 </a>
             </li>
         </ul>
-         LOGO
+
         <div class="logo-box">
             <a href="/dashboard" class="logo text-center">
                         <span class="logo-lg">
